--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,10 @@
     "name": "Messy search",
     "description": "This extension allows you to search content in the mess that is your tabs to easily find the information you are looking for",
     "version": "1.0",
-    "manifest_version": 3,
+    "manifest_version": 2,
     "background": {
-        "service_worker": "background.js"
+        "scripts": ["background.js"],
+        "persistent": true
     },
     "action": {
         "default_icon": {
