--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,9 @@
     "name": "Messy search",
     "description": "This extension allows you to search content in the mess that is your tabs to easily find the information you are looking for",
     "version": "1.0",
-    "manifest_version": 2,
+    "manifest_version": 3,
     "background": {
-        "scripts": ["background.js"],
-        "persistent": true
+        "service_worker": "background.js"
     },
     "action": {
         "default_icon": {
